--- a/src/GUI/FileEncryptionPage.fxml
+++ b/src/GUI/FileEncryptionPage.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.image.Image?>
 <AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FileEncryptionPageController">
 
    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" layoutX="38.0" layoutY="93.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="525.0" />
@@ -45,7 +46,7 @@
    </Text>
    <Text fx:id="fileOutPath" fill="#2200ff" layoutX="127.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
    <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
-<!--      <Image url="/menu1.png"/>-->
+      <Image url="/menu1.png"/>
    </ImageView>
 
 </AnchorPane>
