--- a/src/GUI/HashSumCheckerPage.fxml
+++ b/src/GUI/HashSumCheckerPage.fxml
@@ -1,14 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="GUI.HashSumCheckerPageController"
-            prefHeight="375.0" prefWidth="600.0">
-
+<?import javafx.scene.image.Image?>
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HashSumCheckerPageController">
+   <children>
+      <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
+         <Image url="/menu1.png"/>
+      </ImageView>
+      <Text fill="WHITE" layoutX="224.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File hash checker">
+         <font>
+            <Font name="Tahoma" size="20.0" />
+         </font>
+      </Text>
+      <VBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="58.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="572.0" spacing="20.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="572.0" />
+                  <Text fx:id="dragNDropText" fill="#009900" layoutX="223.0" layoutY="36.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
+                     <font>
+                        <Font name="System Italic" size="16.0" />
+                     </font>
+                  </Text>
+                  <Button id="browse" fx:id="browseInFile" layoutX="14.0" layoutY="17.0" mnemonicParsing="false" onAction="#browseInButtonAction" text="Browse..." />
+                  <Text fx:id="fileInPath" fill="#2200ff" layoutX="106.0" layoutY="35.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="451.13671875">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Paste hash here and press 'Compare' button">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
+            <TextArea fx:id="hash2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0" stylesheets="@TextArea.css">
+               <font>
+                  <Font name="Tahoma" size="12.0" />
+               </font>
+            </TextArea>
+            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="572.0" spacing="20.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#compareHash" text="Compare" />
+                  <ImageView fx:id="operationStatus" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
