--- a/src/GUI/ShowKey.fxml
+++ b/src/GUI/ShowKey.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="showKey" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" stylesheets="@ShowKey.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ShowKeyController">
+<AnchorPane id="showKey" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" stylesheets="@ShowKey.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.ShowKeyController">
     <Text fx:id="cipherName" fill="#009900" layoutX="75.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #0d0d0d;" text="AES-256 KEY" textAlignment="CENTER" wrappingWidth="250.03466796875">
         <font>
           <Font name="Tahoma" size="25.0" />
