--- a/src/GUI/SideMenu.fxml
+++ b/src/GUI/SideMenu.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox id="menu" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="200.0" spacing="20.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.SideMenuController">
+<VBox id="menu" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="375.0" prefWidth="200.0" spacing="20.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.SideMenuController">
    <Button mnemonicParsing="false" onAction="#homeButtonAction" prefHeight="25.0" prefWidth="150.0" text="Home" textFill="WHITE">
       <font>
          <Font name="Tahoma Bold" size="12.0" />
@@ -21,7 +22,7 @@
          <Font name="Tahoma Bold" size="12.0" />
       </font>
    </Button>
-   <Button layoutX="35.0" layoutY="73.0" mnemonicParsing="false" onAction="#hashSumCheckerButtonAction" prefHeight="25.0" prefWidth="150.0" text="Hashsum checker" textFill="WHITE">
+   <Button layoutX="35.0" layoutY="73.0" mnemonicParsing="false" onAction="#hashSumCheckerButtonAction" prefHeight="25.0" prefWidth="150.0" text="File checksum" textFill="WHITE">
       <font>
          <Font name="Tahoma Bold" size="12.0" />
       </font>
