--- a/src/GUI/AboutPage.fxml
+++ b/src/GUI/AboutPage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -18,63 +19,56 @@
          <Font name="Tahoma" size="20.0" />
       </font>
    </Text>
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="300.0" layoutX="14.0" layoutY="61.0" stroke="#009900" strokeType="INSIDE" width="572.0" />
    <VBox alignment="TOP_CENTER" layoutY="74.0" prefHeight="300.0" prefWidth="600.0" spacing="20.0">
-      <children>
-         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="SimpleJavaCrypter is a program written in java which combines a number of useful functions: encryption/decryption of text and files with various algorithms,     file and text hash-sum calculation and hush-sum checker. There are several encryption algorithms available right now: AES-128, AES-256, DES and SimpleCipher." textAlignment="JUSTIFY" wrappingWidth="550.0">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
+            text="SimpleJavaCrypter is a program written in java which combines a number of useful functions: encryption/decryption of text and files with various algorithms,     file and text hash-sum calculation and hush-sum checker. There are several encryption algorithms available right now: AES-128, AES-256, DES and SimpleCipher."
+            textAlignment="JUSTIFY" wrappingWidth="550.0">
+         <font>
+            <Font size="14.0"/>
+         </font>
+      </Text>
+      <HBox alignment="BASELINE_LEFT" maxWidth="-Infinity" prefHeight="28.0" prefWidth="550.0">
+         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="More info:">
             <font>
-               <Font size="14.0" />
+               <Font name="Tahoma" size="14.0"/>
             </font>
          </Text>
-         <HBox alignment="BASELINE_LEFT" maxWidth="-Infinity" prefHeight="28.0" prefWidth="550.0">
-            <children>
-               <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="More info:">
+         <Hyperlink onAction="#repoLinkAction" text="https://github.com/MasterFlomaster1/SimpleJavaCrypter">
+            <font>
+               <Font size="14.0"/>
+            </font>
+         </Hyperlink>
+      </HBox>
+      <HBox maxWidth="-Infinity" prefHeight="100.0" prefWidth="550.0" spacing="10.0">
+         <ImageView fitHeight="136.0" fitWidth="130.0">
+            <Image url="/profile.jpg"/>
+         </ImageView>
+         <VBox prefHeight="149.0" prefWidth="450.0" spacing="10.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Author">
+               <font>
+                  <Font name="Tahoma" size="20.0"/>
+               </font>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="MasterFlomaster1">
+               <font>
+                  <Font name="Tahoma" size="14.0"/>
+               </font>
+            </Text>
+            <HBox alignment="BASELINE_LEFT" prefHeight="28.0" prefWidth="358.0">
+               <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Github profile:">
                   <font>
-                     <Font name="Tahoma" size="14.0" />
+                     <Font name="Tahoma" size="14.0"/>
                   </font>
                </Text>
-               <Hyperlink onAction="#repoLinkAction" text="https://github.com/MasterFlomaster1/SimpleJavaCrypter">
+               <Hyperlink onAction="#profileLinkAction" text="https://github.com/MasterFlomaster1">
                   <font>
-                     <Font size="14.0" />
+                     <Font size="14.0"/>
                   </font>
                </Hyperlink>
-            </children>
-         </HBox>
-         <HBox maxWidth="-Infinity" prefHeight="100.0" prefWidth="550.0" spacing="10.0">
-            <children>
-               <ImageView fitHeight="149.0" fitWidth="149.0">
-                  <Image url="/profile.jpg"/>
-               </ImageView>
-               <VBox prefHeight="149.0" prefWidth="450.0" spacing="10.0">
-                  <children>
-                     <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Author">
-                        <font>
-                           <Font name="Tahoma" size="20.0" />
-                        </font>
-                     </Text>
-                     <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="MasterFlomaster1">
-                        <font>
-                           <Font name="Tahoma" size="14.0" />
-                        </font>
-                     </Text>
-                     <HBox alignment="BASELINE_LEFT" prefHeight="28.0" prefWidth="358.0">
-                        <children>
-                           <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Github profile:">
-                              <font>
-                                 <Font name="Tahoma" size="14.0" />
-                              </font>
-                           </Text>
-                           <Hyperlink onAction="#profileLinkAction" text="https://github.com/MasterFlomaster1">
-                              <font>
-                                 <Font size="14.0" />
-                              </font>
-                           </Hyperlink>
-                        </children>
-                     </HBox>
-                  </children>
-               </VBox>
-            </children>
-         </HBox>
-      </children>
+            </HBox>
+         </VBox>
+      </HBox>
    </VBox>
 
 </AnchorPane>
