--- a/src/GUI/FileHashPage.fxml
+++ b/src/GUI/FileHashPage.fxml
@@ -21,43 +21,43 @@
       </font>
    </Text>
    <VBox layoutX="14.0" layoutY="58.0" prefHeight="300.0" prefWidth="572.0" spacing="20.0">
-      <children>
-         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file to work with">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file to work with">
+         <font>
+            <Font name="System Bold" size="12.0"/>
+         </font>
+      </Text>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="572.0">
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" onDragDropped="#handleDragDropped"
+                    onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="572.0"/>
+         <Text fx:id="dragNDropText" fill="#009900" layoutX="223.0" layoutY="36.0" onDragDropped="#handleDragDropped"
+               onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
             <font>
-               <Font name="System Bold" size="12.0" />
+               <Font name="System Italic" size="16.0"/>
             </font>
          </Text>
-         <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="572.0">
-            <children>
-               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="572.0" />
-               <Text fx:id="dragNDropText" fill="#009900" layoutX="223.0" layoutY="36.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
-                  <font>
-                     <Font name="System Italic" size="16.0" />
-                  </font>
-               </Text>
-               <Button id="browse" fx:id="browseInFile" layoutX="14.0" layoutY="18.0" mnemonicParsing="false" onAction="#browseInButtonAction" text="Browse..." />
-               <Text fx:id="fileInPath" fill="#2200ff" layoutX="91.0" layoutY="34.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="451.13671875">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
-               </Text>
-            </children>
-         </Pane>
-         <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="572.0">
-            <children>
-               <Button layoutX="211.0" mnemonicParsing="false" onAction="#hashButtonAction" text="Hash" />
-            </children>
-         </Pane>
-         <Text fill="WHITE" layoutX="10.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hash sum">
+         <Button id="browse" fx:id="browseInFile" layoutX="14.0" layoutY="18.0" mnemonicParsing="false"
+                 onAction="#browseInButtonAction" text="Browse..."/>
+         <Text fx:id="fileInPath" fill="#2200ff" layoutX="91.0" layoutY="34.0" onDragDropped="#handleDragDropped"
+               onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="451.13671875">
             <font>
-               <Font name="System Bold" size="12.0" />
+               <Font size="14.0"/>
             </font>
          </Text>
-         <TextArea fx:id="hashSumText" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0" stylesheets="@TextArea.css" wrapText="true">
-            <font>
-               <Font name="Tahoma" size="12.0" />
-            </font>
-         </TextArea>
-      </children>
+      </Pane>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0"
+            prefWidth="572.0">
+         <Button layoutX="211.0" mnemonicParsing="false" onAction="#hashButtonAction" text="Hash"/>
+      </Pane>
+      <Text fill="WHITE" layoutX="10.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hash sum">
+         <font>
+            <Font name="System Bold" size="12.0"/>
+         </font>
+      </Text>
+      <TextArea fx:id="hashSumText" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+                minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0" stylesheets="@TextArea.css" wrapText="true">
+         <font>
+            <Font name="Tahoma" size="12.0"/>
+         </font>
+      </TextArea>
    </VBox>
 </AnchorPane>
