--- a/src/GUI/HashSumCheckerPage.fxml
+++ b/src/GUI/HashSumCheckerPage.fxml
@@ -12,56 +12,62 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.image.Image?>
-<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.HashSumCheckerPageController">
-   <children>
-      <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
-         <Image url="/menu1.png"/>
-      </ImageView>
-      <Text fill="WHITE" layoutX="224.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File hash verifier">
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.HashSumCheckerPageController">
+   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0"
+              onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" onMouseEntered="#mouseEntered"
+              onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed"
+              onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
+      <Image url="/menu1.png"/>
+   </ImageView>
+   <Text fill="WHITE" layoutX="224.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File hash verifier">
+      <font>
+         <Font name="Tahoma" size="20.0"/>
+      </font>
+   </Text>
+   <VBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="58.0" maxHeight="-Infinity" maxWidth="-Infinity"
+         minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="572.0" spacing="20.0">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file">
          <font>
-            <Font name="Tahoma" size="20.0" />
+            <Font name="System Bold" size="12.0"/>
          </font>
       </Text>
-      <VBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="58.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="572.0" spacing="20.0">
-         <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Text>
-            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0">
-               <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="572.0" />
-                  <Text fx:id="dragNDropText" fill="#009900" layoutX="223.0" layoutY="36.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
-                     <font>
-                        <Font name="System Italic" size="16.0" />
-                     </font>
-                  </Text>
-                  <Button id="browse" fx:id="browseInFile" layoutX="14.0" layoutY="17.0" mnemonicParsing="false" onAction="#browseInButtonAction" text="Browse..." />
-                  <Text fx:id="fileInPath" fill="#2200ff" layoutX="106.0" layoutY="35.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="451.13671875">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-               </children>
-            </Pane>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Paste hash here and press 'Verify' button">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Text>
-            <TextArea fx:id="hash2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0" stylesheets="@TextArea.css">
-               <font>
-                  <Font name="Tahoma" size="12.0" />
-               </font>
-            </TextArea>
-            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="572.0" spacing="20.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#verifyChecksum" text="Verify" />
-                  <ImageView fx:id="operationStatus" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </children>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="60.0" prefWidth="572.0">
+         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" onDragDropped="#handleDragDropped"
+                    onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="572.0"/>
+         <Text fx:id="dragNDropText" fill="#009900" layoutX="223.0" layoutY="36.0"
+               onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE"
+               strokeWidth="0.0" text="Drag'n'Drop AREA">
+            <font>
+               <Font name="System Italic" size="16.0"/>
+            </font>
+         </Text>
+         <Button id="browse" fx:id="browseInFile" layoutX="14.0" layoutY="17.0" mnemonicParsing="false"
+                 onAction="#browseInButtonAction" text="Browse..."/>
+         <Text fx:id="fileInPath" fill="#2200ff" layoutX="106.0" layoutY="35.0" onDragDropped="#handleDragDropped"
+               onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="451.13671875">
+            <font>
+               <Font size="14.0"/>
+            </font>
+         </Text>
+      </Pane>
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Paste hash here and press 'Verify' button">
+         <font>
+            <Font name="System Bold" size="12.0"/>
+         </font>
+      </Text>
+      <TextArea fx:id="hash2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                prefHeight="60.0" prefWidth="572.0" stylesheets="@TextArea.css">
+         <font>
+            <Font name="Tahoma" size="12.0"/>
+         </font>
+      </TextArea>
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="30.0" prefWidth="572.0" spacing="20.0">
+         <Button mnemonicParsing="false" onAction="#verifyChecksum" text="Verify"/>
+         <ImageView fx:id="operationStatus" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true"
+                    preserveRatio="true"/>
+      </HBox>
+   </VBox>
 </AnchorPane>
