--- a/src/GUI/FileEncryptionPage.fxml
+++ b/src/GUI/FileEncryptionPage.fxml
@@ -3,50 +3,70 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.image.Image?>
 <AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="GUI.FileEncryptionPageController">
-
-   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" layoutX="38.0" layoutY="93.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="525.0" />
+   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
+      <Image url="/menu1.png"/>
+   </ImageView>
    <Text fill="WHITE" layoutX="236.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File encryption">
       <font>
          <Font name="Tahoma" size="20.0" />
       </font>
    </Text>
-   <Text fx:id="dragNDropText" fill="#009900" layoutX="237.0" layoutY="129.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" opacity="0.22" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
-      <font>
-         <Font name="System Italic" size="16.0" />
-      </font>
-   </Text>
-   <Button layoutX="38.0" layoutY="277.0" mnemonicParsing="false" onAction="#encryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Encrypt" />
-   <Button layoutX="413.0" layoutY="277.0" mnemonicParsing="false" onAction="#decryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Decrypt" />
-   <Button id="browse" fx:id="browseInFile" layoutX="49.0" layoutY="111.0" mnemonicParsing="false" onAction="#browseInButtonAction" text="Browse..." />
-   <Text fill="WHITE" layoutX="38.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file to work with">
-      <font>
-         <Font name="Tahoma" size="15.0" />
-      </font>
-   </Text>
-   <Text fill="WHITE" layoutX="38.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select directory to save file">
-      <font>
-         <Font name="Tahoma" size="15.0" />
-      </font>
-   </Text>
-   <Button id="browse" fx:id="browseOutFile" layoutX="49.0" layoutY="203.0" mnemonicParsing="false" onAction="#browseOutButtonAction" text="Browse..." />
-   <Text fx:id="fileInPath" fill="#2200ff" layoutX="127.0" layoutY="127.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875">
-      <font>
-         <Font name="Tahoma" size="14.0" />
-      </font></Text>
-   <Text fill="WHITE" layoutX="38.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose operation">
-      <font>
-         <Font name="Tahoma" size="15.0" />
-      </font>
-   </Text>
-   <Text fx:id="fileOutPath" fill="#2200ff" layoutX="127.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
-   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
-      <Image url="/menu1.png"/>
-   </ImageView>
+   <VBox layoutX="14.0" layoutY="58.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="572.0" spacing="20.0">
+      <children>
+         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file to work with">
+            <font>
+               <Font name="Tahoma" size="15.0" />
+            </font>
+         </Text>
+         <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="572.0">
+            <children>
+            
+               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="60.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="575.0" />
+               <Text fx:id="dragNDropText" fill="#009900" layoutX="223.0" layoutY="36.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
+                  <font>
+                     <Font name="System Italic" size="16.0" />
+                  </font>
+               </Text>
+               <Button id="browse" fx:id="browseInFile" layoutX="14.0" layoutY="18.0" mnemonicParsing="false" onAction="#browseInButtonAction" text="Browse..." />
+               <Text fx:id="fileInPath" fill="#2200ff" layoutX="91.0" layoutY="34.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="449.13671875">
+                  <font>
+                     <Font name="Tahoma" size="14.0" />
+                  </font>
+               </Text>
+            </children>
+         </Pane>
+         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Select directory to save file">
+            <font>
+               <Font name="Tahoma" size="15.0" />
+            </font>
+         </Text>
+         <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="572.0">
+            <children>
+               <Text fx:id="fileOutPath" fill="#2200ff" layoutX="91.0" layoutY="17.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
+               <Button id="browse" fx:id="browseOutFile" layoutX="14.0" mnemonicParsing="false" onAction="#browseOutButtonAction" text="Browse..." />
+            </children>
+         </Pane>
+         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose operation">
+            <font>
+               <Font name="Tahoma" size="15.0" />
+            </font>
+         </Text>
+         <HBox alignment="CENTER" prefHeight="25.0" prefWidth="600.0" spacing="200.0">
+            <children>
+               <Button mnemonicParsing="false" onAction="#encryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Encrypt" />
+               <Button mnemonicParsing="false" onAction="#decryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Decrypt" />
+            </children>
+         </HBox>
+      </children>
+   </VBox>
 
 </AnchorPane>
