--- a/src/GUI/TextHashPage.fxml
+++ b/src/GUI/TextHashPage.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -18,12 +19,35 @@
           <Font name="Tahoma" size="20.0" />
         </font>
     </Text>
-    <VBox alignment="CENTER" layoutY="68.0" prefHeight="301.0" prefWidth="600.0" spacing="20.0">
-        <TextArea fx:id="inputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="500.0" wrapText="true">
-         <font>
-            <Font name="Tahoma" size="12.0" />
-         </font></TextArea>
-        <Button mnemonicParsing="false" onAction="#hashButtonAction" text="HASH" />
-        <TextArea fx:id="outputText" layoutX="60.0" layoutY="144.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
+    <VBox layoutX="14.0" layoutY="58.0" prefHeight="300.0" prefWidth="572.0" spacing="20.0">
+      <VBox prefHeight="115.0" prefWidth="572.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Input text">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
+              <TextArea fx:id="inputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="572.0" stylesheets="@TextArea.css" wrapText="true">
+               <font>
+                  <Font name="Tahoma" size="12.0" />
+               </font>
+            </TextArea>
+         </children>
+      </VBox>
+      <HBox alignment="CENTER" prefHeight="25.0" prefWidth="572.0">
+         <children>
+              <Button mnemonicParsing="false" onAction="#hashButtonAction" text="HASH" />
+         </children>
+      </HBox>
+      <VBox prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Hash">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
+              <TextArea fx:id="outputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="103.0" prefWidth="572.0" promptText="Output" stylesheets="@TextArea.css" wrapText="true" />
+         </children>
+      </VBox>
     </VBox>
 </AnchorPane>
