--- a/src/GUI/AboutPage.fxml
+++ b/src/GUI/AboutPage.fxml
@@ -21,22 +21,20 @@
    </Text>
    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="300.0" layoutX="14.0" layoutY="61.0" stroke="#009900" strokeType="INSIDE" width="572.0" />
    <VBox alignment="TOP_CENTER" layoutY="74.0" prefHeight="300.0" prefWidth="600.0" spacing="20.0">
-      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
-            text="SimpleJavaCrypter is a program written in java which combines a number of useful functions: encryption/decryption of text and files with various algorithms,     file and text hash-sum calculation and hush-sum checker. There are several encryption algorithms available right now: AES-128, AES-256, DES and SimpleCipher."
-            textAlignment="JUSTIFY" wrappingWidth="550.0">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Simple tool with JavaFX GUI that can handle following tasks: file and text encryption/decryption, hash sum calculation and file checksum verifier, text encoding. Supports AES128, AES256, DES, 3DES, MD2, MD5, SHA1, SHA224, SHA256, SHA384, SHA512." textAlignment="JUSTIFY" wrappingWidth="550.0">
          <font>
-            <Font size="14.0"/>
+            <Font name="Tahoma" size="14.0" />
          </font>
       </Text>
       <HBox alignment="BASELINE_LEFT" maxWidth="-Infinity" prefHeight="28.0" prefWidth="550.0">
          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="More info:">
             <font>
-               <Font name="Tahoma" size="14.0"/>
+               <Font name="Tahoma" size="14.0" />
             </font>
          </Text>
          <Hyperlink onAction="#repoLinkAction" text="https://github.com/MasterFlomaster1/SimpleJavaCrypter">
             <font>
-               <Font size="14.0"/>
+               <Font size="14.0" />
             </font>
          </Hyperlink>
       </HBox>
@@ -47,23 +45,23 @@
          <VBox prefHeight="149.0" prefWidth="450.0" spacing="10.0">
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Author">
                <font>
-                  <Font name="Tahoma" size="20.0"/>
+                  <Font name="Tahoma" size="20.0" />
                </font>
             </Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="MasterFlomaster1">
                <font>
-                  <Font name="Tahoma" size="14.0"/>
+                  <Font name="Tahoma" size="14.0" />
                </font>
             </Text>
             <HBox alignment="BASELINE_LEFT" prefHeight="28.0" prefWidth="358.0">
                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Github profile:">
                   <font>
-                     <Font name="Tahoma" size="14.0"/>
+                     <Font name="Tahoma" size="14.0" />
                   </font>
                </Text>
                <Hyperlink onAction="#profileLinkAction" text="https://github.com/MasterFlomaster1">
                   <font>
-                     <Font size="14.0"/>
+                     <Font size="14.0" />
                   </font>
                </Hyperlink>
             </HBox>
