--- a/src/GUI/TextHashPage.fxml
+++ b/src/GUI/TextHashPage.fxml
@@ -23,29 +23,28 @@
         <VBox prefHeight="115.0" prefWidth="572.0">
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Input text">
                 <font>
-                    <Font name="System Bold" size="12.0"/>
+                    <Font name="System Bold" size="12.0" />
                 </font>
             </Text>
-            <TextArea fx:id="inputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-                      minWidth="-Infinity" prefHeight="100.0" prefWidth="572.0" stylesheets="@TextArea.css"
-                      wrapText="true">
+            <TextArea fx:id="inputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="572.0" stylesheets="@TextArea.css" wrapText="true">
                 <font>
-                    <Font name="Tahoma" size="12.0"/>
+                    <Font name="Tahoma" size="12.0" />
                 </font>
           </TextArea>
         </VBox>
         <HBox alignment="CENTER" prefHeight="25.0" prefWidth="572.0">
-            <Button mnemonicParsing="false" onAction="#hashButtonAction" text="HASH"/>
+            <Button mnemonicParsing="false" onAction="#hashButtonAction" text="Hash">
+            <font>
+               <Font name="Tahoma" size="12.0" />
+            </font></Button>
         </HBox>
         <VBox prefHeight="200.0" prefWidth="100.0">
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Hash">
                 <font>
-                    <Font name="System Bold" size="12.0"/>
+                    <Font name="System Bold" size="12.0" />
                 </font>
             </Text>
-            <TextArea fx:id="outputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-                      minWidth="-Infinity" prefHeight="103.0" prefWidth="572.0" promptText="Output"
-                      stylesheets="@TextArea.css" wrapText="true"/>
+            <TextArea fx:id="outputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="103.0" prefWidth="572.0" promptText="Output" stylesheets="@TextArea.css" wrapText="true" />
         </VBox>
     </VBox>
 </AnchorPane>
